styles.css
@font-face {
    font-family: FrutigerLTStd-Black;
    src: url(fonts/FrutigerLTStd-Black.otf);
}
* {
    margin: 0;
    padding: 0;
}
body {
    width: 1024px;
    margin: auto;
    height: 100%;
    background-image: url(images/background.png);
    background-repeat: no-repeat;
    background-size: auto;
    background-position: center;
}
header {
    /* height: 8.66%; */
    height: 48px;
    border-bottom: white;
    -webkit-box-shadow: 0px 2px 2px 0px #e2e2e2;
    -moz-box-shadow: 0px 2px 2px 0px #e2e2e2;
    box-shadow: 0px 2px 2px 0px #e2e2e2;
    background-color: #eeeeee; 
}
h1 {
    font-size: 27px;
    font-family: FrutigerLTStd-Black, sans-serif;
    font-weight: bold;
    color: #432171;
    margin: 26px 0 35px 246px;
}
.calc_column {
    /* width: 37.01%;*/
    width: 377px;
}
.calc_column li {
    list-style-type: none;
}
.calc_column_header input {
    width: 183px;
    height: 30px;
    float: left;
    margin: 10px 6px 10px 13px;
    border-color: #9a9a9c;
    border-style: solid;
    border-width: 1px;
    font-family: sans-serif;
    font-size: 10px;
    color: black;
    -webkit-box-shadow: inset 0px 2px 2px 0px #d8d7d8;
    -moz-box-shadow: inset 0px 2px 2px 0px #d8d7d8;
    box-shadow: inset 0px 2px 2px 0px #d8d7d8;
    text-align: center;
}
.calculate_button {
    font-size: 12px;
    font-family: FrutigerLTStd-Black, sans-serif;
    color: white;
    text-transform: uppercase;
    margin: 10px 6px 10px 0px;
    width: 96px;
    height: 32px;
    float: left;
    background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0.7, #ddd0e3),
	color-stop(1, #e31e86)
    );
    background-image: -o-linear-gradient(top, #e31e86 70%, #ddd0e3 100%);
    background-image: -moz-linear-gradient(top, #e31e86 70%, #ddd0e3 100%);
    background-image: -webkit-linear-gradient(top, #e31e86 70%, #ddd0e3 100%);
    background-image: -ms-linear-gradient(top, #e31e86 70%, #ddd0e3 100%);
    background-image: linear-gradient(to top, #e31e86 70%, #ddd0e3 100%);
    border-color: #e31e86;
    border-width: 1px;
    border-style: solid;
}
.help_button {
    float: right;
    height: 28px;
    width: 28px;
    border-radius: 50%;
    margin: 13px 8px 0px 0px;
    font-size: 12px;
    font-family: FrutigerLTStd-Black, sans-serif;
    color: #502d80;
    background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0.7, #d2d2d2),
	color-stop(1, #ebebea)
    );
    background-image: -o-linear-gradient(top, #ebebea 70%, #d2d2d2 100%);
    background-image: -moz-linear-gradient(top, #ebebea 70%, #d2d2d2 100%);
    background-image: -webkit-linear-gradient(top, #ebebea 70%, #d2d2d2 100%);
    background-image: -ms-linear-gradient(top, #ebebea 70%, #d2d2d2 100%);
    background-image: linear-gradient(to top, #ebebea 70%, #d2d2d2 100%);
    border-color: #d2d3d4;
    border-width: 1px;
    border-style: solid;
}
.calc_column_header div {
    border-color: #9a9a9c;
    border-style: solid;
    border-width: 1px;
    width: 375px;
    height: 54px;
    background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0, #ffffff),
	color-stop(1, #9c9b9c)
    );
    background-image: -o-linear-gradient(top, #9c9b9c 0%, #ffffff 100%);
    background-image: -moz-linear-gradient(top, #9c9b9c 0%, #ffffff 100%);
    background-image: -webkit-linear-gradient(top, #9c9b9c 0%, #ffffff 100%);
    background-image: -ms-linear-gradient(top, #9c9b9c 0%, #ffffff 100%);
    background-image: linear-gradient(to top, #9c9b9c 0%, #ffffff 100%);
}
.calc_column_header p {
    width: 100%;
    height: 54px;
    background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0, #e8e8e8),
	color-stop(1, #ffffff)
    );
    background-image: -o-linear-gradient(top, #ffffff 0%, #e8e8e8 100%);
    background-image: -moz-linear-gradient(top, #ffffff 0%, #e8e8e8 100%);
    background-image: -webkit-linear-gradient(top, #ffffff 0%, #e8e8e8 100%);
    background-image: -ms-linear-gradient(top, #ffffff 0%, #e8e8e8 100%);
    background-image: linear-gradient(to top, #ffffff 0%, #e8e8e8 100%);
    color: #7c7a7b;
    font-family: sans-serif;
    font-size: 10px;
}
.left_column {
    float: left;
    margin-left: 105px;
    height: 417px;
    /* height: 54.69%;
    margin-left: 10.25%; */
}
.right_column {
    height: 353px;
    margin-left: 55px;
    float: left;
    /* margin-right: 10.84%;
    height: 46.09%;*/
}
.formulas {
    border-color: #9b9a9a;
    border-style: solid;
    border-width: 1px;
    background-color: white;
    color: #e31e86;
    margin: 3px 9px 3px 0px;
    width: 91px;
    height: 24px;
    float: right;
    font-family: FrutigerLTStd-Black,sans-serif;
    font-size: 15px;
    -webkit-box-shadow: inset 0px 2px 2px 0px #d8d7d8;
    -moz-box-shadow: inset 0px 2px 2px 0px #d8d7d8;
    box-shadow: inset 0px 2px 2px 0px #d8d7d8;
    text-align: right;
}
.formulas p{
    margin: 3px 9px 4px 0px;
}
.plus_button {
    color: #7c7a7b;
    font-weight: bolder;
    font-size: 14px;
    text-align: center;
    border-radius: 50%;
    height: 21px;
    width: 21px;
    background-color: #ededed;
    border-color: #979899;
    float: left;
    background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0.7, #d5d5d5),
	color-stop(1, #e8e8e8)
    );
    background-image: -o-linear-gradient(top, #e8e8e8 70%, #d5d5d5 100%);
    background-image: -moz-linear-gradient(top, #e8e8e8 70%, #d5d5d5 100%);
    background-image: -webkit-linear-gradient(top, #e8e8e8 70%, #d5d5d5 100%);
    background-image: -ms-linear-gradient(top, #e8e8e8 70%, #d5d5d5 100%);
    background-image: linear-gradient(to top, #e8e8e8 70%, #d5d5d5 100%);
    border-color: #7c7a7b;
    border-width: 1px;
    border-style: solid;
    margin-top: 10px;
    margin-left: 7px;
}
.variable {
    width: 100%;
    height: 73px;
}
.variable_name {
    height: 34px;
    width: 100%;
    background-color: #c1c0c0;
}
.variable_description {
    font-family: sans-serif;
    font-size: 10px;
    color: white;
    height: 40px;
    width: 100%;
    background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0, #ABB2B8),
	color-stop(1, #DCDFE1)
    );
    background-image: -o-linear-gradient(top, #ABB2B8 0%, #DCDFE1 100%);
    background-image: -moz-linear-gradient(top, #ABB2B8 0%, #DCDFE1 100%);
    background-image: -webkit-linear-gradient(top, #ABB2B8 0%, #DCDFE1 100%);
    background-image: -ms-linear-gradient(top, #ABB2B8 0%, #DCDFE1 100%);
    background-image: linear-gradient(to top, #ABB2B8 0%, #DCDFE1 100%);
}
h2 {
    background-color: #c1c0c0;
    height: 31px;
    /* width: 100%; */
    font-size: 16px;
    font-family: FrutigerLTStd-Black,sans-serif;
    color: white;
    float: left;
    margin: 0 auto;
}
.calculator_legend { 
    margin-top: 462px;
    margin-left: 105px;
    width: 808px;
    height: 87px;
    /* height: 11.39%;
    width: 79.00%;
    margin-left: 10.25%; */
}
.calculator_legend_header {
    /* height: 4.43%; */
    height: 34px;
    background-color: #502d80;
}
.calculator_legend li {
    height: 54px;
    width: 192px;
    display: inline-block;
    list-style: none;
}
section {
    height: 100%;
}
footer {
    font-size: 12px;
    margin-top: 42px;
    margin-left: 105px;
    width: 696px;
    height: 27px;
    /* width: 68.36%;
    margin-left: 10.25%;*/
}

